# hiloop-interceptor

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  README.md  REVIEW.md  SECURITY.md  clippy.toml  deny.toml
.config/: nextest.toml
.github/: dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_ci_pins.py
.github/workflows/: ci.yml  dependency-review.yml  release.yml
crates/hiloop-core/: Cargo.toml
crates/hiloop-core/src/: capture.rs  event.rs  identity.rs  lib.rs
crates/hiloop-core/tests/: capture_contract.rs  spine_conformance.rs
crates/hiloop-interceptor/: Cargo.toml  build.rs
crates/hiloop-interceptor/benches/: stdio_path.rs
crates/hiloop-interceptor/proto/hiloop/telemetry/v1/: blob.proto  telemetry.proto
crates/hiloop-interceptor/src/: anomaly.rs  blob.rs  blob_drain.rs  blob_upload.rs  cli.rs  egress.rs  exec_events.rs  exporters.rs  framing.rs  grpc_client.rs  grpc_export.rs  inspect.rs  inspect_cli.rs  jsonl.rs  lib.rs  main.rs  net_capture.rs  otlp.rs  pipeline.rs  proxy.rs  raw.rs  redact.rs  seams.rs  secret.rs  spool.rs  stdio.rs  supervisor.rs
crates/hiloop-interceptor/src/netns/: classifier.rs  dns.rs  dns_relay.rs  event_relay.rs  fatal.rs  gateway.rs  ingress.rs  listener.rs  manager.rs  mod.rs  pasta.rs  protocol.rs  resolver.rs  route.rs  routing.rs  run.rs  security.rs  system.rs  testing.rs  tls_policy.rs  tls_transport.rs  udp.rs  udp_broker.rs  udp_ingress.rs
crates/hiloop-interceptor/tests/: blob_upload.rs  grpc_export.rs  interceptor_e2e.rs  net_capture_contract.rs  netns_fatal.rs  netns_run_api.rs  netns_substrate.rs  public_run_api.rs  stdio_jsonl.rs
crates/hiloop-interceptor/tests/fixtures/: mock_harness.sh
docs/: BENCHMARKING.md  CAPTURE.md  INTERFACES.md  PAYLOAD-HANDOFF-RESPONSE.md  PAYLOAD-HANDOFF.md  RUST_STYLE.md  SYSTEM_MAP.html  TESTING.md
docs/decisions/: 0001-cooperative-capture-vs-ebpf.md  0002-transparent-capture-contracts.md
handoffs/: handoff-06-07=2026.md
