[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"
authors = ["hiloop"]
repository = "https://github.com/tboser/hiloop-interceptor"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
futures-core = "0.3"
futures-util = "0.3"
hiloop-core = { version = "0.0.0", path = "crates/hiloop-core" }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
ulid = { version = "1", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
dbg_macro = "warn"
unwrap_used = "warn"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = "full"
strip = false
lto = false

[profile.fast-test]
inherits = "dev"
opt-level = 1

[profile.dist]
inherits = "release"
