[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"
authors = ["hiloop"]
repository = "https://github.com/hiloopai/hiloop-interceptor"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
futures-core = "0.3"
futures-util = "0.3"
hiloop-core = { version = "0.1.0", path = "crates/hiloop-core" }
hudsucker = { version = "0.24", features = ["http2"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
# `client-legacy`/`http1` power the credential-broker HTTP client; `tokio` the proxy.
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
# The credential broker on the hosted path is the public HTTPS API edge, so the broker client needs
# TLS: a plaintext `HttpConnector` rejects an `https://` URL before it ever connects (surfacing as a
# `client error (Connect)`). `hyper-rustls` gives the legacy client an HTTPS-or-HTTP connector, and
# `webpki-roots` anchors the public chain in the minimal sandbox base where native roots are empty
# (same reason the gRPC exporter enables the webpki bundle — see the tonic note below).
hyper-rustls = "0.27"
rustls = "0.23"
webpki-roots = "1"
# Dev-only: the credential-broker regression test serves an HTTPS stub so the client's TLS path is
# exercised end to end (a self-signed cert the test client trusts).
tokio-rustls = "0.26"
# IDNA/host canonicalization for egress policy matching (NFC + IDN→punycode + IP-literal
# detection in every notation, via the WHATWG URL host parser). MSRV 1.63.
url = "2.5"
# CIDR membership matching (IPv4 + IPv6) for egress policy. Pure Rust, MSRV-lenient.
ipnet = "2"
nix = { version = "0.31", default-features = false, features = ["signal", "process", "term"] }
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace"] }
proptest = "1"
prost = "0.14"
# Capture-side secret redaction; already in the dependency graph transitively, so a
# direct dep adds no new build weight.
regex = "1"
protox = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
# Native gRPC export to the telemetry gateway. `tls-ring` is the rustls provider; both root sources
# are enabled: `tls-native-roots` trusts the OS store (so an on-prem gateway behind a private CA
# works), and `tls-webpki-roots` adds the compiled-in Mozilla bundle. The exporter selects both via
# `with_enabled_roots()` — native roots alone fail to auto-discover the trust store in a minimal
# container (the sandbox base, where `hiloop run` embeds this interceptor), yielding an empty root set
# → `UnknownIssuer` even when the public chain's anchor is installed; the webpki bundle anchors it
# regardless. The in-crate test server uses the same stack over h2c.
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots", "tls-webpki-roots"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
ulid = { version = "1", features = ["serde"] }
x509-parser = "0.18"
# Best-effort zeroing of fetched secret values after each request is built.
zeroize = "1"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
dbg_macro = "warn"
unwrap_used = "warn"
# Every lint suppression must say why: forces `#[allow(lint, reason = "…")]` / `#[expect(lint,
# reason = "…")]`. CI runs clippy with `-D warnings`, so a bare `#[allow(lint)]` fails the build.
allow_attributes_without_reason = "warn"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = "full"
strip = false
lto = false

[profile.fast-test]
inherits = "dev"
opt-level = 1

[profile.dist]
inherits = "release"
