[package]
name = "hiloop-core"
version = "0.0.0"
description = "Shared contract types for hiloop: fork-tree identity (the spine) and telemetry event schema."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/hiloop-core"

[dependencies]
serde.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
